code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_59.wast
(assert_invalid
  (module (func $type-value-unreached-select-f64-i32 (result f64)
    (block (result i32) (select (unreachable) (unreachable) (unreachable)))
  ))
  "type mismatch"
)